Fix image width for wrapLeft class

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -157,6 +157,7 @@ figure {
   .wrapLeft {
     float: left;
     margin-bottom: 0px;
+    width: 150px;
   }
 
   figure {
